@@ -1,5 +1,6 @@
 Changelog for GHCiD
 
+    Add the number of modules loaded after All good
     Print out messages until the prompt comes up
     #23, add arguments and change what commands get invoked
     #35, change the titlebar icon on Windows
